# poc-healthid

./: .gitignore  OAuth2-Basics.drawio  OIDC-PKCE.drawio  Untitled Diagram.drawio
aua/aua-vue/: README.md  nginx.conf  package.json  vue.config.js
aua/aua-vue/public/: index.html
aua/aua-vue/src/: App.vue  main.ts
aua/aua-vue/src/components/: HelloWorld.vue
aua/aua-vue/src/login/: AuthView.vue  Buzzwords.vue  BuzzwordsView.vue  CallbackView.vue  ChooserView.vue  LoginMain.vue  LoginView.vue  federation.ts  main.ts  oidc.ts
deployment/: README.adoc  deploy.sh  docker-compose.yaml
deployment/static-web/html/: index.html
healthid-keycloak/: .gitignore  docker-compose.yaml  pyproject.toml  test-public.py  test.py
healthid-keycloak/client/: pyproject.toml  realm.py
healthid-keycloak/healthid-authenticator/: build.gradle.kts  healthid-challenge.ftl  settings.gradle.kts
healthid-keycloak/healthid-authenticator/src/main/java/dev/spilikin/healthid/keycloak/: AuthnChallengeInfo.java  AuthnChallengeProvider.java  HealthIDAuthenticator.java  HealthIDAuthenticatorFactory.java  Library.java
healthid-keycloak/healthid-authenticator/src/test/java/dev/spilikin/healthid/keycloak/: LibraryTest.java
healthid-keycloak/healthid-authenticator/theme/: healthid-challenge.ftl  healthid-poll-response.ftl
healthid-keycloak/healthid-authenticator/theme/resources/: healthid-login.js
healthid-keycloak/healthid-authenticator/theme/templates/: challenge.json.ftl  poll-response.ftl  qrcode-page.ftl
healthid-keycloak/js-authenticator/: healthid-authenticator.js
(+3 files in other folders)
