[tool.poetry]
name = "healthid-keycloak"
version = "0.1.0"
description = ""
authors = ["spilikin <108782+spilikin@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
