[tool.poetry]
name = "healthid-keycloak-client"
version = "0.1.0"
description = "Client scripts for HealthID Keycloak"
authors = ["spilikin <108782+spilikin@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
keycloak = "^3.0.1"
python-keycloak = "^0.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
